# sales-territory-mapping-tool

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  handoff.md  plan-live.md  plan.md
.antigravitycli/: 6eaf7d3d-996e-4841-a229-29882f80a3ae.json
.claude/handoffs/: 2026-05-20-execute-live-flow-plan.md  2026-05-20-phase-2-3-live-flow.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_market_is_active.py  0003_dataset_deleted_at.py  0004_geocode_cache.py  0005_live_assignments.py  0006_location_assignment_dc_name.py  0007_seller_colors.py
backend/app/: main.py
backend/app/api/: accounts.py  auth.py  datasets.py  live.py  map.py  markets.py  router.py
backend/app/core/: access.py  config.py  database.py  ids.py  security.py
backend/app/models/: __init__.py  domain.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: bq_dc.py  bq_metrics.py  dc_oracle.py  filter_schema.py  geocode_enrich.py  geocoder.py  import_jobs.py  import_parser.py  live_assign.py  msa_client.py  seller_colors.py
backend/tests/: test_export.py  test_geocoder.py
frontend/: TRASH-FILES.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
frontend/src/environments/: environment.ts
sample-data/: southern-california-10-accounts.xlsx  southern-california-200-accounts.xlsx  ~$southern-california-10-accounts.xlsx
(+74 files in other folders)
